--- a/ata/css/main.css
+++ b/ata/css/main.css
@@ -24,3 +24,9 @@
   vertical-align: middle;
   text-align: center;
 }
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
