--- a/html/style.css
+++ b/html/style.css
@@ -1,17 +1,24 @@
-body{
-      background-color: gray;
+body {
+    background-color: gray;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
 }
-.view{
+
+.view {
     text-align: center;
-    margin-top: 500px;
 }
-.bord{
-    border-color:red;
+
+.bord {
+    border-color: red;
     border-style: solid;
-    background-color:red ;
-    margin-left: 750px; 
+    background-color: red;
+    margin-left: 750px;
     margin-right: 750px;
 }
+
 .seat {
     background-color: #444451;
     height: 12px;
@@ -28,16 +35,16 @@ body{
     margin: 15px 0;
     transform: rotateX(-45deg);
     box-shadow: 0 3px 10px rgba(255, 255, 255, 0.7);
-    
+
 }
 
 .container {
     perspective: 1000px;
     margin-bottom: 30px;
+    max-width: 20vw;
 }
-.table{
+
+.table {
     margin: 15px 0;
     text-align: center;
 }
-  
-  
