--- a/Nee/style.css
+++ b/Nee/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: url('https://media.discordapp.net/attachments/677934875285782558/721060908939345973/FB_IMG_1583608850409.jpg?width=658&height=658');
+  background-image: url('https://cdn.discordapp.com/attachments/677934875285782558/721059033573884024/B612_20200611_143558_264.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
