--- a/Gechsim/style.css
+++ b/Gechsim/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-image: url('https://scontent.fpnh19-1.fna.fbcdn.net/v/t1.0-9/87196571_885340225251562_4140430876586541056_n.jpg?_nc_cat=111&_nc_sid=8bfeb9&_nc_ohc=vhH-wc9uRX0AX9NbUUJ&_nc_ht=scontent.fpnh19-1.fna&oh=c2e01c1fe23a634e833a31d75970d930&oe=5F09DDC9');
+  background-image: url('img/sim.jpg');
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
